Initial data for maps

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Map Overview - Cities Skylines</title>
+    <link rel="stylesheet" href="src/style.css" />
+    <link href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css" rel="stylesheet" />
+  </head>
+  <body>
     <h1>Maps Overview</h1>
     <h2>Cities Skylines</h2>
-</body>
+    <p>
+      Here is a list of all the maps in
+      <a href="https://www.paradoxinteractive.com/games/cities-skylines/about">Cities Skylines</a>.
+    </p>
+    <p>This list is initially sorted by DLC in order of release date.</p>
+    <p>You can search or sort in the list below.</p>
+    <p>You can view details on each map by clicking on the name.</p>
+
+    <div id="wrapper"></div>
+
+    <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js"></script>
+    <script src="src/index.js"></script>
+  </body>
 </html>
