adding let's play feature

--- a/map.html
+++ b/map.html
@@ -23,6 +23,10 @@
     <h2>Fish</h2>
     <img id="map-fish" />
 
+    <h2>Let's Play</h2>
+    <div id="lets-play"></div>
+
     <script src="src/map.js"></script>
+    <script src="src/lets-play.js"></script>
   </body>
 </html>
