adding more playlists

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>You can search or sort in the list below.</p>
     <p>You can view details on each map by clicking on the name.</p>
 
-    <div id="wrapper"></div>
+    <div id="maps-overview"></div>
 
     <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js"></script>
     <script src="src/index.js"></script>
