Theme for the site + some cleanup

--- a/map.html
+++ b/map.html
@@ -4,29 +4,92 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Map Overview - Cities Skylines</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="src/theme.css" />
   </head>
   <body>
-    <h1>Map</h1>
-    <h2 id="selected-map"></h2>
+    <nav id="main-nav"></nav>
+    <div class="main">
+      <section>
+        <h1>Map Details</h1>
+        <h2 id="selected-map"></h2>
+        <h2></h2>
+        <p>
+          Here you can switch to a different map:
+          <span id="select-map"></span>
+        </p>
+      </section>
+      <section id="map-lets-play">
+        <h3>Let's Play</h3>
+        <p>A collection of lets play playlists</p>
+        <div id="lets-play"></div>
+      </section>
+      <section id="map-start">
+        <h3>Start</h3>
+        <p></p>
+        <a id="map-start-link">
+          <img id="map-start-img" />
+        </a>
+      </section>
+      <section id="map-top">
+        <h3>Top</h3>
+        <p></p>
+        <a id="map-top-link">
+          <img id="map-top-img" />
+        </a>
+      </section>
+      <section id="map-tiles">
+        <h3>Tiles</h3>
+        <p></p>
+        <a id="map-tiles-link">
+          <img id="map-tiles-img" />
+        </a>
+      </section>
+      <section id="map-height">
+        <h3>Height</h3>
+        <p></p>
+        <a id="map-height-link">
+          <img id="map-height-img" />
+        </a>
+      </section>
+      <section id="map-resources">
+        <h3>Resources</h3>
+        <p></p>
+        <a id="map-resources-link">
+          <img id="map-resources-img" />
+        </a>
+      </section>
+      <section id="map-wind">
+        <h3>Wind</h3>
+        <p></p>
+        <a id="map-wind-link">
+          <img id="map-wind-img" />
+        </a>
+      </section>
+      <section id="map-fish">
+        <h3>Fish</h3>
+        <p></p>
+        <a id="map-fish-link">
+          <img id="map-fish-img" />
+        </a>
+      </section>
+    </div>
 
-    <h2>Tiles</h2>
-    <p>25 tile overview map</p>
-    <img id="map-tiles" />
-
-    <h2>Height</h2>
-    <img id="map-height" />
-
-    <h2>Resources</h2>
-    <img id="map-resources" />
-
-    <h2>Fish</h2>
-    <img id="map-fish" />
-
-    <h2>Let's Play</h2>
-    <div id="lets-play"></div>
-
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="src/main.js"></script>
+    <script src="src/index.js"></script>
     <script src="src/map.js"></script>
     <script src="src/lets-play.js"></script>
+    <script src="src/select-map.js"></script>
+    <script>
+      initForAllPages();
+      init(Pages.Map);
+    </script>
   </body>
 </html>
