map overview page, cleanup

--- a/index.html
+++ b/index.html
@@ -45,12 +45,11 @@
         <div id="maps-overview"></div>
       </section>
     </div>
-    <footer></footer>
+    <footer id="footer"></footer>
 
     <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="src/main.js"></script>
-    <script src="src/index.js"></script>
+    <script src="src/overview.js"></script>
     <script>
       initForAllPages();
       init(Pages.Overview);
