--- a/lets-play.html
+++ b/lets-play.html
@@ -23,12 +23,12 @@
       </section>
       <section>
         <div id="lets-play"></div>
+        <div id="lets-play-new"></div>
       </section>
     </div>
-    <footer></footer>
+    <footer id="footer"></footer>
 
     <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="src/main.js"></script>
     <script src="src/lets-play.js"></script>
     <script>
