--- a/map.html
+++ b/map.html
@@ -25,6 +25,7 @@
           <span id="select-map"></span>
         </p>
       </section>
+      <section id="map-metadata"></section>
       <section id="map-lets-play">
         <h3>Let's Play</h3>
         <p>A collection of lets play playlists</p>
@@ -80,10 +81,10 @@
         </a>
       </section>
     </div>
+    <footer id="footer"></footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="src/main.js"></script>
-    <script src="src/index.js"></script>
+    <script src="src/overview.js"></script>
     <script src="src/map.js"></script>
     <script src="src/lets-play.js"></script>
     <script src="src/select-map.js"></script>
