only one image at a time

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         <p>Site is under development.<br />
           <ul>
             <li>Only images created and uploaded for the maps with true in the first column below.</li>
-            <li>Missing data for 'Outside Connections', 'Buildable area' and 'Theme'</li>
-            <li>Missing data for 'Little Hamlet' and 'Megalopolis' milestone population targets</li>
+            <li>Missing data for Map Pack 3</li>
           </ul>
         </p>
       </section>
