--- a/map.html
+++ b/map.html
@@ -28,57 +28,64 @@
       <section id="map-metadata"></section>
       <section id="map-lets-play">
         <h3>Let's Play</h3>
-        <p>A collection of lets play playlists</p>
+        <p>A collection of lets play playlists on this map</p>
         <div id="lets-play"></div>
       </section>
-      <section id="map-start">
-        <h3>Start</h3>
-        <p></p>
-        <a id="map-start-link">
-          <img id="map-start-img" />
-        </a>
+
+      <section>
+        <div class="tab">
+          <button class="tablinks active" onclick="showScreenshot(event, 'start')">Start</button>
+          <button class="tablinks" onclick="showScreenshot(event, 'top')">Top</button>
+          <button class="tablinks" onclick="showScreenshot(event, 'tiles')">Tiles</button>
+          <button class="tablinks" onclick="showScreenshot(event, 'height')">Height</button>
+          <button class="tablinks" onclick="showScreenshot(event, 'resources')">Resources</button>
+          <button class="tablinks" onclick="showScreenshot(event, 'wind')">Wind</button>
+          <button class="tablinks" onclick="showScreenshot(event, 'fish')">Fish</button>
+        </div>
       </section>
-      <section id="map-top">
-        <h3>Top</h3>
-        <p></p>
-        <a id="map-top-link">
-          <img id="map-top-img" />
-        </a>
-      </section>
-      <section id="map-tiles">
-        <h3>Tiles</h3>
-        <p></p>
-        <a id="map-tiles-link">
-          <img id="map-tiles-img" />
-        </a>
-      </section>
-      <section id="map-height">
-        <h3>Height</h3>
-        <p></p>
-        <a id="map-height-link">
-          <img id="map-height-img" />
-        </a>
-      </section>
-      <section id="map-resources">
-        <h3>Resources</h3>
-        <p></p>
-        <a id="map-resources-link">
-          <img id="map-resources-img" />
-        </a>
-      </section>
-      <section id="map-wind">
-        <h3>Wind</h3>
-        <p></p>
-        <a id="map-wind-link">
-          <img id="map-wind-img" />
-        </a>
-      </section>
-      <section id="map-fish">
-        <h3>Fish</h3>
-        <p></p>
-        <a id="map-fish-link">
-          <img id="map-fish-img" />
-        </a>
+      <section>
+        <div id="start" class="tabcontent">
+          <h3>Start</h3>
+          <a id="map-start-link">
+            <img id="map-start-img" />
+          </a>
+        </div>
+        <div id="top" class="tabcontent" style="display: none">
+          <h3>Top</h3>
+          <a id="map-top-link">
+            <img id="map-top-img" />
+          </a>
+        </div>
+        <div id="tiles" class="tabcontent" style="display: none">
+          <h3>Tiles</h3>
+          <a id="map-tiles-link">
+            <img id="map-tiles-img" />
+          </a>
+        </div>
+        <div id="height" class="tabcontent" style="display: none">
+          <h3>Height</h3>
+          <a id="map-height-link">
+            <img id="map-height-img" />
+          </a>
+        </div>
+        <div id="resources" class="tabcontent" style="display: none">
+          <h3>Resources</h3>
+          <a id="map-resources-link">
+            <img id="map-resources-img" />
+          </a>
+        </div>
+        <div id="wind" class="tabcontent" style="display: none">
+          <h3>Wind</h3>
+          <a id="map-wind-link">
+            <img id="map-wind-img" />
+          </a>
+        </div>
+        <div id="fish" class="tabcontent" style="display: none">
+          <h3>Fish</h3>
+          <a id="map-fish-link">
+            <img id="map-fish-img" />
+          </a>
+        </div>
       </section>
     </div>
     <footer id="footer"></footer>
