--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <section class="warn">
         <p>Site is under development.<br />
           <ul>
-            <li>Only images created and uploaded for the maps with true in the first column below.</li>
+            <li>Images are only uploaded for the maps with 'Yes' under 'Images' below.</li>
             <li>Missing data for Map Pack 3</li>
           </ul>
         </p>
