--- a/lets-play.html
+++ b/lets-play.html
@@ -19,7 +19,10 @@
       <section>
         <h1>Let's Play</h1>
         <h2>Cities Skylines</h2>
-        <p>Here is a list of Let's Play videos, where the map is identified and the YouTuber has made a playlist.</p>
+        <p>
+          Here is a list of Let's Play videos, where the map is identified and the YouTuber has made a playlist.<br />
+          By clicking on the titles, you will be redirected to the playlist.
+        </p>
       </section>
       <section>
         <div id="lets-play"></div>
