--- a/map.html
+++ b/map.html
@@ -33,6 +33,7 @@
       </section>
 
       <section>
+        <h3>Screenshots</h3>
         <div id="screenshotNav" class="tab"></div>
       </section>
       <section id="screenshots"></section>
@@ -40,10 +41,8 @@
     <footer id="footer"></footer>
 
     <script src="src/main.js"></script>
-    <script src="src/overview.js"></script>
     <script src="src/map.js"></script>
     <script src="src/lets-play.js"></script>
-    <script src="src/select-map.js"></script>
     <script>
       initForAllPages();
       init(Pages.Map);
