--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         </p>
         <p>
           Here is a list of all the maps in Cities Skylines.<br />
-          This list is initially sorted by DLC in order of release date.<br />
+          This list is initially sorted by DLC* in order of release date.<br />
           You can search or sort in the list below.<br />
           You can view details on each map by clicking on the name.
         </p>
+        <p id="stringDLCs"></p>
       </section>
       <section class="warn">
         <p>Site is under development.<br />
