fix for main nav

--- a/map.html
+++ b/map.html
@@ -2,7 +2,10 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta name="description" content="Map Overview - Here is a list of all the maps in Cities Skylines">
+  <meta name="keywords" content="Cities Skylines Maps, Cities Skylines DLC Maps">
+  <meta name="author" content="Jonas Svedstrup">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Map</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +17,11 @@
 </head>
 
 <body>
-  <nav id="main-nav"></nav>
+  <nav id="main-nav">
+    <a href="index.html">Overview</a>
+    <a href="map.html?map=black-woods">Map</a>
+    <a href="lets-play.html">Let's Play</a>
+  </nav>
   <div class="main">
     <section>
       <h1>Map</h1>
