--- a/lets-play.html
+++ b/lets-play.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Map Overview - Here is a list of all the maps in Cities Skylines">
   <meta name="keywords" content="Cities Skylines Maps, Cities Skylines DLC Maps">
   <meta name="author" content="Jonas Svedstrup">
+  <meta name="viewport" content="width=600, initial-scale=0">
   <title>Let's Play Cities Skylines</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
