--- a/compare.html
+++ b/compare.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap">
     <link rel="stylesheet" href="src/style.css">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="src/favicon.ico">
 </head>
 
 <body>
@@ -43,6 +43,8 @@
     </div>
     <footer id="footer"></footer>
 
+    <script src="src/util.js"></script>
+    <script src="src/data.js"></script>
     <script src="src/main.js"></script>
     <script>
         init(Pages.Compare);
